mineami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mineami
  namespace: ogk
spec:
  type: ClusterIP
  selector:
    app: mineami
  ports:
    - name: web
      port: 80
      targetPort: 25565
