mineami/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mineami
  namespace: ogk
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - mineami.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mineami
          port: 80
